<resources>
    <string name="app_name">Super Case</string>

    <string name="caseaddtitle">بيانات القضية </string>
    <string name="caseNum">رقم القضية  </string>
    <string name="caseYear"> عام القضية </string>
    <string name="caseCount">الرقم الآلي </string>
    <string name="caseCountYear">الدائرة </string>
    <string name="caseAccuser">المتهم </string>
    <string name="caseCreater">المدعي </string>
    <string name="caseSessionDate">تاريخ الجلسة </string>
    <string name="casePapers">مستندات القضية </string>
    <string name="caseNotes">ملاحظات القضية </string>
    <string name="caseModifiedDate"> تسجيل البيانات </string>
    <string name="Addsessioninfo">  اضف جلسة جديدة </string>
    <string name="insertcaselay">  اضف </string>
    <string name="updatecasely">  عدل </string>
    <string name="deletecaselay">  احذف </string>


    <string name="add">اضف</string>
    <string name="button">Button</string>
    <string name="title">title</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>

    <string name="editandrestore">تعديل واستعادة</string>
    <string name="deleted_cases">Deleted Cases</string>
    <string name="cw"> الاسبوع الحالي</string>
    <string name="nw"> الاسبوع المقبل</string>
    <string name="cm"> الشهر الحالي</string>
    <string name="nm"> الشهر المقبل</string>
    <string name="all">جميع الجلسات</string>
    <string name="deletedcases">القضايا المحذوفة</string>
    <string name="edit">تعديل</string>
    <string name="cancel">الغاء</string>
    <string name="delete">حذف</string>
    <string name="manage">ادارة</string>
    <string name="test">اختبر</string>
    <string name="search">بحث</string>
    <string name="anw">الاسبوع اللاحق</string>


</resources>
