<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <EditText
            android:id="@+id/et1caseNum"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="#4501579B"
            android:ems="10"
            android:hint="@string/caseNum"
            android:inputType="number" />

    <EditText
            android:id="@+id/et2caseYear"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/caseYear"
            android:inputType="number" />

    <EditText
            android:id="@+id/et3caseCount"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="#4501579B"
            android:ems="10"
            android:hint="@string/caseCount"
            android:inputType="number" />

    <EditText
            android:id="@+id/et4caseCountYear"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/caseCountYear"
            android:inputType="number" />

    <EditText
            android:id="@+id/et5caseAccuser"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:background="#4501579B"
            android:ems="10"
            android:hint="@string/caseAccuser"
            android:inputType="textPersonName" />


    <EditText
            android:id="@+id/et6caseCreater"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/caseCreater"
            android:inputType="textPersonName" />

    <TextView
            android:id="@+id/et7caseSessionDate"


            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:autoSizeTextType="none"
            android:autofillHints=""
            android:background="#4501579B"

            android:elegantTextHeight="false"
            android:ems="10"
            android:freezesText="false"
            android:gravity="center_vertical"
            android:hint="@string/caseSessionDate"
            android:textAllCaps="true"
            android:textSize="18sp" />


    <EditText
            android:id="@+id/et8casePapers"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/casePapers"
            android:inputType="textPersonName" />

    <EditText
            android:id="@+id/et9caseNotes"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:autofillHints=""

            android:background="#4501579B"
            android:ems="10"
            android:hint="@string/caseNotes"
            android:inputType="textPersonName" />

    <EditText
            android:id="@+id/et10caseModifiedDate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_weight="1"
            android:autofillHints=""

            android:ems="10"
            android:hint="@string/caseModifiedDate"
            android:inputType="textPersonName" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:textAlignment="center">

        <Button

                android:id="@+id/updbtn"
                android:layout_width="158dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="#4CAF50"
                android:gravity="center"
                android:text="@string/editandrestore"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold" />

        <Button

                android:id="@+id/delbtn"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="#D53D70"
                android:gravity="center"
                android:text="@string/Undelete"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>