<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/rowstyle"
        android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bkgrnd"
        android:orientation="vertical">


        <TextView

                android:id="@+id/et1caseNumT2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:background="@drawable/statelarg"
                android:backgroundTint="@color/myblackLight"
                android:padding="10dp"
                android:text="@string/caseNum"
                android:textAlignment="center"
                android:textColor="#E7ECE9"
                android:textSize="22sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="5"
                android:layout_marginBottom="5dp"
            android:orientation="horizontal">


            <TextView
                    android:id="@+id/caseCountYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_rowstyle"
                    android:text="@string/caseCountYear"
                    android:textAlignment="center"
                    android:textColor="#311B92"
                    android:textSize="24sp" />

            <TextView

                    android:id="@+id/caseCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:background="@drawable/background_rowstyle"
                    android:backgroundTint="#5733691E"
                    android:text="@string/caseCount"
                    android:textAlignment="center"
                    android:textColor="#311B92"
                    android:textSize="24sp" />

            <TextView
                    android:id="@+id/caseYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/background_rowstyle"
                    android:baselineAligned="false"
                    android:text="@string/caseYear"

                    android:textAlignment="center"
                    android:textColor="#311B92"
                    android:textSize="24sp" />

            <TextView
                    android:id="@+id/caseNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:background="@drawable/background_rowstyle"
                    android:backgroundTint="#5733691E"
                    android:text="@string/caseNum"
                    android:textAlignment="center"
                    android:textColor="#311B92"
                    android:textSize="24sp" />

        </LinearLayout>

    <LinearLayout
            android:id="@+id/casedetailslayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"

            android:orientation="horizontal"
            android:weightSum="4">


        <TextView

                android:id="@+id/caseCountYearV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_rowstyle"
                android:text="@string/caseCountYear"
                android:textAlignment="center"
                android:textColor="#FFFCFC"
                android:textSize="24sp" />

        <TextView

                android:id="@+id/caseCountV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:background="@drawable/background_rowstyle"
                android:backgroundTint="#5733691E"
                android:text="@string/caseCount"
                android:textAlignment="center"
                android:textColor="#FFFCFC"
                android:textSize="24sp" />

        <TextView
                android:id="@+id/caseYearV"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/background_rowstyle"
                android:baselineAligned="false"
                android:text="@string/caseYear"
                android:textAlignment="center"
                android:textColor="#FFFCFC"
                android:textSize="24sp" />

        <TextView
                android:id="@+id/caseNumV"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:background="@drawable/background_rowstyle"
                android:backgroundTint="#5733691E"
                android:text="@string/caseNum"
                android:textAlignment="center"
                android:textColor="#FFFCFC"
                android:textSize="24sp" />

    </LinearLayout>


    <TextView

            android:id="@+id/caseAccuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_rowstyle"

            android:backgroundTint="#4601579B"
            android:paddingHorizontal="@dimen/default_gap"
            android:text="@string/caseAccuser"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    <TextView
            android:id="@+id/caseCreater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_rowstyle"
            android:paddingHorizontal="@dimen/default_gap"

            android:text="@string/caseCreater"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    <TextView
            android:id="@+id/caseSessionDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_rowstyle"
            android:backgroundTint="#4601579B"

            android:paddingHorizontal="@dimen/default_gap"
            android:text="@string/caseSessionDate"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    <TextView
            android:id="@+id/casePapers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"

            android:background="@drawable/background_rowstyle"
            android:paddingHorizontal="@dimen/default_gap"
            android:text="@string/casePapers"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

    <TextView
            android:id="@+id/caseModifiedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/background_rowstyle"
            android:backgroundTint="#4601579B"

            android:paddingHorizontal="@dimen/default_gap"
            android:singleLine="false"
            android:text="@string/caseModifiedDate"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />


        <Button
                android:id="@+id/inneredit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edit"
                android:text="@string/manage"
                android:textColor="@color/mywhite"
                android:textSize="24sp"
                android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rowstyle"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

        <TextView
                android:id="@+id/caseNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingHorizontal="@dimen/default_gap"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:text="@string/caseNotes"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

    </ScrollView>

</LinearLayout>